# sprinkler-controller

./: .gitignore  Cargo.toml  README.md
controller/: .editorconfig  Cargo.toml  build.rs  sdkconfig.defaults
controller/src/: consts.rs  dio_controller.rs  embassy_websocket.rs  lib.rs  storage.rs  types.rs  websocket.rs
controller/src/macros/: join_many.rs  mk_static.rs  mod.rs
controller/src/tasks/: connection.rs  keep_alive.rs  mod.rs  net_task.rs  read_websocket.rs  scan_networks.rs  toggle_zone.rs
dashboard/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
dashboard/src/components/: DaySelector.tsx  HandledSwitch.tsx  HourSelector.tsx  Tab.tsx  index.ts
dashboard/src/constants/: app.ts
dashboard/src/contexts/: WebSocketContext.tsx  index.ts
dashboard/src/layouts/: SafeAreaPage.tsx  index.ts
dashboard/src/pages/: _app.tsx  index.tsx
dashboard/src/screens/: HomeScreen.tsx  index.ts
dashboard/src/styles/: globals.css
dashboard/src/types/: clientMessages.ts  index.ts  (+3 more)
server/: Cargo.toml
server/src/: error.rs  main.rs  message.rs  types.rs
server/src/config/: load.rs  mod.rs  save.rs
server/src/message/: mod.rs
server/src/message/controller/: mod.rs
server/src/message/server/: controller_heartbeat.rs  mod.rs
server/src/message/user/: get_config.rs  mod.rs  set_schedule.rs  status.rs  toggle_zone.rs
server/src/scheduler_runner/: mod.rs  runner.rs  spawner.rs
shared/: Cargo.toml
shared-types/: Cargo.toml
shared/src/: lib.rs
websocket-server/: Cargo.toml
websocket-server/src/: main.rs  message.rs  types.rs
(+13 files in other folders)
