[package]
name = "websocket-server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.29"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.35.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
shared = { path = "../shared" }
toml = "0.9.2"
